# prometheus-timescale-adaptor-rs

./: Cargo.toml
prometheus-timescale-adaptor-rs/: Cargo.toml
prometheus-timescale-adaptor-rs/src/: main.rs
protobuf_gen/: Cargo.toml  Readme.md
protobuf_gen/prom_protos/: remote.proto  types.proto
protobuf_gen/src/: main.rs
timescale_pgmodel/: Cargo.toml
timescale_pgmodel/src/: cache.rs  ingestor.rs  labels.rs  lib.rs
timescale_pgmodel/src/promb/: mod.rs  remote.rs  types.rs
