[package]
name = "timescale_pgmodel"
version = "0.1.0"
authors = ["Joshua Lockerman"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.4"
chashmap = "2.2.2"
evmap = "9.0.0"
futures = "0.3.4"
indexmap = "1.3.2"
once_cell = "1.3.1"
protobuf = { version = "2.10.2", features = ["with-bytes"] }
tokio-postgres = "0.5.3"

